gen/v25.3/rpk/rpk-redpanda-start.adoc
= rpk redpanda start
:description: rpk redpanda start

Start redpanda

== Usage

[,bash]
----
rpk redpanda start [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--advertise-kafka-addr |strings |A comma-separated list of Kafka addresses to advertise (scheme://host:port|name).

|--advertise-pandaproxy-addr |strings |A comma-separated list of Pandaproxy addresses to advertise (scheme://host:port|name).

|--advertise-rpc-addr |string |The advertised RPC address (host:port).

|--check |- |When set to false will disable system checking before starting redpanda (default true).

|-h, --help |- |Help for start.

|--install-dir |string |Directory where redpanda has been installed.

|--kafka-addr |strings |A comma-separated list of Kafka listener addresses to bind to (scheme://host:port|name).

|--mode |string |Mode sets well-known configuration properties for development or test environments; use --mode help for more info.

|--node-tuner-state-path |string |Alternative path to read the node tuner state file from (if exists).

|--pandaproxy-addr |strings |A comma-separated list of Pandaproxy listener addresses to bind to (scheme://host:port|name).

|--rpc-addr |string |The RPC address to bind to (host:port).

|--schema-registry-addr |strings |A comma-separated list of Schema Registry listener addresses to bind to (scheme://host:port|name).

|-s, --seeds |strings |A comma-separated list of seed nodes to connect to (scheme://host:port|name).

|--timeout |duration |The maximum time to wait for the checks and tune processes to complete (e.g. 300ms, 1.5s, 2h45m) (default 10s).

|--tune |- |When present will enable tuning before starting redpanda.

|--well-known-io |string |The cloud provider and VM type, in the format <provider>:<vm type>:<storage type>.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===